<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_representatives">FIND REPRESENTATIVES</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="address">Address</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="zip">zip</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="representative_search">Representative Search</string>
</resources>
